--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate && prisma migrate deploy"
   },
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.4.3",
     "@prisma/client": "^5.21.1",
+    "@tiptap/pm": "^2.9.1",
+    "@tiptap/react": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
     "json-server": "^1.0.0-beta.3",
     "next": "14.2.16",
     "react": "^18",
