--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "json-server": "^1.0.0-beta.3",
     "next": "14.2.16",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
