--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "resend": "^4.0.1-alpha.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
